--- a/AomiEngine/AomiEngine.vcxproj.filters
+++ b/AomiEngine/AomiEngine.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Header">
-      <UniqueIdentifier>{633ce7f0-cee6-461c-8b45-f336e4c4834c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source">
       <UniqueIdentifier>{aeb88204-0874-483d-b122-0befd7474d90}</UniqueIdentifier>
     </Filter>
@@ -12,6 +9,9 @@
     </Filter>
     <Filter Include="Resource\Shader">
       <UniqueIdentifier>{9fab3cff-94db-4ec4-a284-a1b3db8dd98f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Include">
+      <UniqueIdentifier>{633ce7f0-cee6-461c-8b45-f336e4c4834c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -22,7 +22,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AomiEngine.hpp">
-      <Filter>Header</Filter>
+      <Filter>Include</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
