--- a/AomiEngine.vcxproj.filters
+++ b/AomiEngine.vcxproj.filters
@@ -9,10 +9,13 @@
     <ClInclude Include="Graphics.h">
       <Filter>Core</Filter>
     </ClInclude>
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Graphics.cpp">
       <Filter>Core</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
 </Project>
