--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,12 @@ Size=358,153
 Collapsed=0
 
 [Window][Camera]
-Pos=716,78
+Pos=910,30
 Size=309,100
+Collapsed=0
+
+[Window][Player]
+Pos=76,68
+Size=237,54
 Collapsed=0
 
