--- a/AomiEngine.vcxproj
+++ b/AomiEngine.vcxproj
@@ -16,6 +16,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Core\CommandList.cpp" />
     <ClCompile Include="Core\CommandQueue.cpp" />
     <ClCompile Include="Core\DescriptorHeap.cpp" />
@@ -30,9 +32,13 @@
     <ClCompile Include="Core\TextureManager.cpp" />
     <ClCompile Include="Core\Utility.cpp" />
     <ClCompile Include="Core\Window.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyApple.cpp" />
+    <ClCompile Include="Engine\Input.cpp" />
     <ClCompile Include="Engine\Material.cpp" />
     <ClCompile Include="Engine\Model.cpp" />
     <ClCompile Include="Engine\RenderManager.cpp" />
+    <ClCompile Include="Engine\Sprite.cpp" />
     <ClCompile Include="Externals\imgui\imgui.cpp" />
     <ClCompile Include="Externals\imgui\imgui_demo.cpp" />
     <ClCompile Include="Externals\imgui\imgui_draw.cpp" />
@@ -40,14 +46,25 @@
     <ClCompile Include="Externals\imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="Externals\imgui\imgui_tables.cpp" />
     <ClCompile Include="Externals\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="FollowCamera.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math\Camera.cpp" />
     <ClCompile Include="Math\Frustum.cpp" />
     <ClCompile Include="Math\Geometry.cpp" />
     <ClCompile Include="Math\MathUtils.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerBullet.cpp" />
+    <ClCompile Include="PlayerParts.cpp" />
+    <ClCompile Include="PlayerState.cpp" />
+    <ClCompile Include="PlayerStateManager.cpp" />
+    <ClCompile Include="SystemManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Collider.h" />
+    <ClInclude Include="CollisionConfig.h" />
+    <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Core\CommandList.h" />
     <ClInclude Include="Core\CommandQueue.h" />
     <ClInclude Include="Core\DescriptorHandle.h" />
@@ -63,9 +80,13 @@
     <ClInclude Include="Core\TextureManager.h" />
     <ClInclude Include="Core\Utility.h" />
     <ClInclude Include="Core\Window.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyApple.h" />
+    <ClInclude Include="Engine\Input.h" />
     <ClInclude Include="Engine\Material.h" />
     <ClInclude Include="Engine\Model.h" />
     <ClInclude Include="Engine\RenderManager.h" />
+    <ClInclude Include="Engine\Sprite.h" />
     <ClInclude Include="Externals\imgui\imconfig.h" />
     <ClInclude Include="Externals\imgui\imgui.h" />
     <ClInclude Include="Externals\imgui\imgui_impl_dx12.h" />
@@ -74,12 +95,22 @@
     <ClInclude Include="Externals\imgui\imstb_rectpack.h" />
     <ClInclude Include="Externals\imgui\imstb_textedit.h" />
     <ClInclude Include="Externals\imgui\imstb_truetype.h" />
+    <ClInclude Include="FollowCamera.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="Ground.h" />
+    <ClInclude Include="PlayerBullet.h" />
+    <ClInclude Include="PlayerParts.h" />
+    <ClInclude Include="PlayerState.h" />
     <ClInclude Include="Math\Camera.h" />
     <ClInclude Include="Math\Frustum.h" />
     <ClInclude Include="Math\Geometry.h" />
     <ClInclude Include="Math\LightStructs.h" />
     <ClInclude Include="Math\MathUtils.h" />
+    <ClInclude Include="Math\Transform.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerStateManager.h" />
+    <ClInclude Include="SystemManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Externals\imgui\LICENSE.txt" />
@@ -139,6 +170,18 @@
     <None Include="Engine\Shader\ReceiveShadowPS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Engine\Shader\SpritePS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </None>
+    <None Include="Engine\Shader\SpriteVS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
